--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MSEtool
 Title: Management Strategy Evaluation Toolkit
-Version: 3.7.3
+Version: 3.7.9999
 Authors@R: c(
   person("Adrian", "Hordyk", email = "adrian@bluematterscience.com", role = c("aut", "cre")),
   person("Quang", "Huynh", email = "quang@bluematterscience.com", role = "aut"), 
@@ -55,3 +55,77 @@ Suggests:
 LinkingTo: Rcpp, RcppArmadillo
 BugReports: https://github.com/Blue-Matter/MSEtool/issues
 URL: https://msetool.openmse.com/
+Collate: 
+    'ASAP2OM.R'
+    'Class_definitions.R'
+    'AllNewClasses.R'
+    'Awatea2OM.R'
+    'BAM2OM.R'
+    'B_Low_functions.R'
+    'Check.R'
+    'Convert.R'
+    'DFO.R'
+    'Data2csv.R'
+    'Data_Functions.R'
+    'Data_Plotting.R'
+    'Data_documentation.R'
+    'Data_fit_index.R'
+    'Data_make_update.R'
+    'Fease_Functions.R'
+    'Find.R'
+    'Generate.R'
+    'MICE_Rel.R'
+    'MMSE_Object.r'
+    'MMSE_plots.R'
+    'MOM_import.R'
+    'MOM_object.r'
+    'MOM_plots.R'
+    'MP_tuning.R'
+    'MPs_Reference.R'
+    'MSC.R'
+    'MSE_Plotting.R'
+    'MSE_Plotting_PMs.R'
+    'MSE_functions.R'
+    'Misc.R'
+    'Misc_Exported.R'
+    'Misc_Internal.R'
+    'ModelsObjects.R'
+    'Movement_calcs.R'
+    'OM_Plotting.R'
+    'OM_functions.R'
+    'OM_import.R'
+    'OM_init_doc.R'
+    'OM_plots.R'
+    'PMobjects.R'
+    'PMtable.R'
+    'Plot.R'
+    'Populate.R'
+    'Print.R'
+    'RcppExports.R'
+    'SS2Data.R'
+    'SS2MOM.R'
+    'SS2MOM_plots.R'
+    'SS2OM.R'
+    'SSinternal.R'
+    'SampleOM.R'
+    'SelectivityRetention.R'
+    'Sketch_Functions.R'
+    'SlotAccessAssign.R'
+    'SpatialStock.R'
+    'Structure.R'
+    'Templates.R'
+    'Turing.R'
+    'VPA2OM.R'
+    'ValidUnits.R'
+    'WHAM2OM.R'
+    'aaImportFrom.R'
+    'applyMMP.R'
+    'iSCAM2OM.R'
+    'multiMSE.R'
+    'multiMSE_internal.R'
+    'multi_q_estimation.R'
+    'popdyn.R'
+    'popdyn_MICE.R'
+    'runMSE.R'
+    'spatial_targ_opt.R'
+    'utils.R'
