--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,14 +15,101 @@ S3method(plot,pars)
 S3method(predict,Rel)
 S3method(print,Rel)
 S3method(simulate,Rel)
+export("AC<-")
+export("ASK<-")
+export("Agency<-")
+export("Ages<-")
+export("ApicalF<-")
+export("Author<-")
+export("CVDist<-")
+export("CVStay<-")
+export("CVatAge<-")
+export("Catchability<-")
+export("Classes<-")
+export("CommonName<-")
+export("Complexes<-")
+export("Control<-")
+export("CurrentYear<-")
+export("Data<-")
+export("Depletion<-")
+export("DiscardMortality<-")
+export("Distribution<-")
+export("Effort<-")
+export("Email<-")
+export("Fecundity<-")
+export("Final<-")
+export("FishingMortality<-")
+export("Fleet<-")
+export("FracOther<-")
+export("Initial<-")
+export("Interval<-")
+export("Latitude<-")
+export("Length<-")
+export("Longitude<-")
+export("Maturity<-")
+export("MaxAge<-")
+export("MeanAtAge<-")
+export("MeanAtLength<-")
+export("Misc<-")
+export("Model<-")
+export("Modified<-")
+export("Movement<-")
+export("Name<-")
+export("NaturalMortality<-")
+export("Pars<-")
+export("Period<-")
+export("PlusGroup<-")
+export("ProbStaying<-")
+export("RecDevHist<-")
+export("RecDevInit<-")
+export("RecDevProj<-")
+export("Reference<-")
+export("Region<-")
+export("Relations<-")
+export("RelativeSize<-")
+export("Retention<-")
+export("SD<-")
+export("SRR<-")
+export("Seed<-")
+export("Selectivity<-")
+export("SexPars<-")
+export("Source<-")
+export("Spatial<-")
+export("SpawnTimeFrac<-")
+export("Species<-")
+export("Sponsor<-")
+export("Stock<-")
+export("TimeSteps<-")
+export("TruncSD<-")
+export("UnfishedDist<-")
+export("Units<-")
+export("Weight<-")
+export("nReps<-")
+export("nSim<-")
+export("nYears<-")
+export("nsim<-")
+export("nyears<-")
+export("pStar<-")
+export("pYears<-")
+export("proyears<-")
 export(AAVE)
 export(AAVY)
+export(AC)
 export(ASAP2Data)
 export(ASAP2OM)
+export(ASK)
+export(Agency)
+export(Ages)
+export(AllometricMortalityatLength)
+export(ApicalF)
 export(Assess2MOM)
 export(Assess2OM)
+export(AtAge2AtSize)
+export(AtSize2AtAge)
+export(Author)
 export(Awatea2OM)
 export(BAM2MOM)
+export(BevertonHolt)
 export(CALsimp)
 export(COSEWIC_Blow)
 export(COSEWIC_Dplot)
@@ -32,17 +119,30 @@ export(COSEWIC_report)
 export(COSEWIC_tab)
 export(COSEWIC_tab_formatted)
 export(CSRA)
+export(CVDist)
+export(CVStay)
+export(CVatAge)
+export(CalcASK)
 export(CalcAsymptoticDist)
+export(CalcMovement)
 export(Can)
 export(Cant)
+export(Catchability)
+export(Check)
 export(CheckOM)
 export(ChkYrs)
 export(ChooseEffort)
 export(ChooseM)
 export(ChooseSelect)
+export(Classes)
+export(CommonName)
+export(Complexes)
+export(Control)
 export(Converge)
 export(Cos_thresh_tab)
 export(Cplot)
+export(Created)
+export(CurrentYear)
 export(DFO_bar)
 export(DFO_hist)
 export(DFO_plot)
@@ -55,30 +155,75 @@ export(DFO_tab)
 export(DFO_tab_formatted)
 export(DLMDataDir)
 export(DLMdiag)
+export(Data)
 export(Data2csv)
 export(DataDir)
 export(DataInit)
 export(Data_xl)
+export(Depletion)
+export(DiscardMortality)
+export(Distribution)
 export(Dom)
+export(Effort)
+export(Email)
 export(FMSYref)
 export(FMSYref50)
 export(FMSYref75)
 export(Fease)
+export(Fecundity)
+export(FecundityAtAge)
+export(FecundityAtLength)
+export(FecundityModels)
+export(FecundityModelsAge)
+export(FecundityModelsLength)
+export(Final)
+export(FishingMortality)
+export(FishingMortality2Selectivity)
+export(FitMovement)
+export(Fleet)
+export(FracOther)
+export(HockeyStick)
+export(Initial)
 export(Input)
+export(Interval)
 export(Kplot)
 export(LH2OM)
 export(LTY)
 export(Lag_Data)
+export(Latitude)
+export(Length)
+export(LengthModels)
+export(Longitude)
 export(ML2D)
 export(MOM_agg_fleets)
 export(MPtype)
 export(MPurl)
 export(MSEextra)
+export(MarkovFrac)
+export(Maturity)
+export(MaturityAtAge)
+export(MaturityAtLength)
+export(MaturityModels)
+export(MaturityModelsAge)
+export(MaturityModelsLength)
+export(MaxAge)
+export(MeanAtAge)
+export(MeanAtLength)
+export(Misc)
+export(Model)
+export(Modified)
+export(MortalityatAge)
+export(Movement)
 export(NAor0)
 export(NFref)
 export(NOAA_plot)
 export(NOAA_plot2)
+export(Name)
+export(NaturalMortality)
+export(NaturalMortalityModels)
 export(Needed)
+export(OM)
+export(OM2om)
 export(OMdoc)
 export(OMexample)
 export(OMinit)
@@ -91,15 +236,31 @@ export(PMLimit)
 export(PMObj)
 export(PNOF)
 export(PWhisker)
+export(Pars)
+export(Period)
+export(PlusGroup)
 export(Pplot)
 export(Pplot2)
+export(ProbStaying)
 export(Project)
 export(ProjectMOM)
 export(R0conv)
 export(RealFease)
+export(RecDevHist)
+export(RecDevInit)
+export(RecDevProj)
+export(Reference)
+export(Region)
+export(Relations)
+export(RelativeSize)
 export(Replace)
 export(Report)
 export(Required)
+export(Retention)
+export(Ricker)
+export(SD)
+export(SRR)
+export(SRRModels)
 export(SRalphaconv)
 export(SRbetaconv)
 export(SS2Data)
@@ -114,28 +275,47 @@ export(SampleFleetPars)
 export(SampleImpPars)
 export(SampleObsPars)
 export(SampleStockPars)
+export(Seed)
+export(Selectivity)
 export(Sense)
+export(SexPars)
 export(Simulate)
 export(SimulateMOM)
 export(SketchFun)
+export(Source)
+export(Spatial)
+export(SpawnTimeFrac)
+export(Species)
+export(Sponsor)
+export(Stock)
 export(Sub)
 export(SubCpars)
 export(SubOM)
 export(TAC)
 export(TACfilter)
 export(Thresh_tab)
+export(TimeSteps)
 export(Tplot)
 export(Tplot2)
 export(Tplot3)
 export(TradePlot)
+export(TruncSD)
 export(Turing)
 export(TuringMOM)
+export(UnfishedDist)
+export(Units)
 export(Uses)
 export(VOI)
 export(VOI2)
 export(VOIplot)
 export(VPA2OM)
+export(ValidUnits)
 export(WHAM2OM)
+export(Weight)
+export(WeightModels)
+export(WeightatAge)
+export(WeightatLength)
+export(WeightatMeanLength)
 export(XL2Data)
 export(XL2Fleet)
 export(XL2OM)
@@ -178,8 +358,16 @@ export(movfit_Rcpp)
 export(multiDataS)
 export(multiMSE)
 export(multidebug)
+export(nAge)
+export(nReps)
+export(nSim)
+export(nYears)
+export(nsim)
+export(nyears)
 export(optCPU)
 export(optMSY_eq)
+export(pStar)
+export(pYears)
 export(plotFun)
 export(plotOFL)
 export(plotRel)
@@ -189,6 +377,7 @@ export(plot_mov)
 export(plotmulti)
 export(plotquant)
 export(predictLH)
+export(proyears)
 export(read.control.file)
 export(read.data.file)
 export(read.mcmc)
@@ -204,6 +393,7 @@ export(sample_steepness2)
 export(sdconv)
 export(select_MP)
 export(setup)
+export(show)
 export(simmov)
 export(simmov2)
 export(tdlnorm)
@@ -212,6 +402,7 @@ export(trlnorm)
 export(tune_MP)
 export(updateMSE)
 export(validcpars)
+export(vonBert)
 export(wormplot)
 exportClasses(Data)
 exportClasses(Fleet)
@@ -221,9 +412,31 @@ exportClasses(MOM)
 exportClasses(OM)
 exportClasses(Obs)
 exportClasses(Stock)
+exportClasses(ages)
+exportClasses(biology)
 exportClasses(char.log)
+exportClasses(data)
+exportClasses(depletion)
+exportClasses(discardmortality)
+exportClasses(distribution)
+exportClasses(effort)
+exportClasses(fecundity)
+exportClasses(fishingmortality)
+exportClasses(fleet)
 exportClasses(label.class)
+exportClasses(length)
+exportClasses(maturity)
+exportClasses(naturalmortality)
+exportClasses(om)
 exportClasses(prob.class)
+exportClasses(retention)
+exportClasses(selectivity)
+exportClasses(spatial)
+exportClasses(srr)
+exportClasses(stock)
+exportClasses(weight)
+exportMethods(Check)
+exportMethods(Populate)
 exportMethods(SubCpars)
 exportMethods(plot)
 exportMethods(show)
