--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -91,6 +91,7 @@ Collate:
     'Misc_Internal.R'
     'ModelsObjects.R'
     'Movement_calcs.R'
+    'NewInternalFunctions.R'
     'OM_Plotting.R'
     'OM_functions.R'
     'OM_import.R'
@@ -109,6 +110,7 @@ Collate:
     'SSinternal.R'
     'SampleOM.R'
     'SelectivityRetention.R'
+    'SimulateDEV.R'
     'Sketch_Functions.R'
     'SlotAccessAssign.R'
     'SpatialStock.R'
