--- a/NAMESPACE
+++ b/NAMESPACE
@@ -277,9 +277,15 @@ export(SampleObsPars)
 export(SampleStockPars)
 export(Seed)
 export(Selectivity)
+export(SelectivityAtAge)
+export(SelectivityAtLength)
+export(SelectivityModels)
+export(SelectivityModelsAge)
+export(SelectivityModelsLength)
 export(Sense)
 export(SexPars)
 export(Simulate)
+export(SimulateDEV)
 export(SimulateMOM)
 export(SketchFun)
 export(Source)
@@ -359,8 +365,10 @@ export(multiDataS)
 export(multiMSE)
 export(multidebug)
 export(nAge)
+export(nArea)
 export(nReps)
 export(nSim)
+export(nTS)
 export(nYears)
 export(nsim)
 export(nyears)
