--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(DataDir)
 export(DataInit)
 export(Data_xl)
 export(Dom)
+export(Emp)
 export(FMSYref)
 export(FMSYref50)
 export(FMSYref75)
@@ -100,6 +101,7 @@ export(RealFease)
 export(Replace)
 export(Report)
 export(Required)
+export(SAM2OM)
 export(SRalphaconv)
 export(SRbetaconv)
 export(SS2Data)
@@ -118,6 +120,7 @@ export(Sense)
 export(Simulate)
 export(SimulateMOM)
 export(SketchFun)
+export(Splot)
 export(Sub)
 export(SubCpars)
 export(SubOM)
@@ -152,6 +155,9 @@ export(checkMSE)
 export(curEref)
 export(cv)
 export(derive_beta_par)
+export(doHCR)
+export(doIfreq)
+export(doRec)
 export(fetch.file.names)
 export(getmov2)
 export(getnIVs)
@@ -189,6 +195,7 @@ export(plot_mov)
 export(plotmulti)
 export(plotquant)
 export(predictLH)
+export(quantile_plot)
 export(read.control.file)
 export(read.data.file)
 export(read.mcmc)
@@ -206,6 +213,7 @@ export(select_MP)
 export(setup)
 export(simmov)
 export(simmov2)
+export(smoothy)
 export(tdlnorm)
 export(tinyErr)
 export(trlnorm)
