--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export("Species<-")
 export("Sponsor<-")
 export("Stock<-")
 export("TimeSteps<-")
+export("TimeUnits<-")
 export("TruncSD<-")
 export("UnfishedDist<-")
 export("Units<-")
@@ -139,6 +140,7 @@ export(CommonName)
 export(Complexes)
 export(Control)
 export(Converge)
+export(Convert)
 export(Cos_thresh_tab)
 export(Cplot)
 export(Created)
@@ -164,6 +166,7 @@ export(Depletion)
 export(DiscardMortality)
 export(Distribution)
 export(Dom)
+export(DoubleNormal)
 export(Effort)
 export(Email)
 export(FMSYref)
@@ -223,7 +226,6 @@ export(NaturalMortality)
 export(NaturalMortalityModels)
 export(Needed)
 export(OM)
-export(OM2om)
 export(OMdoc)
 export(OMexample)
 export(OMinit)
@@ -245,6 +247,7 @@ export(ProbStaying)
 export(Project)
 export(ProjectMOM)
 export(R0conv)
+export(RDoubleNormal)
 export(RealFease)
 export(RecDevHist)
 export(RecDevInit)
@@ -257,6 +260,11 @@ export(Replace)
 export(Report)
 export(Required)
 export(Retention)
+export(RetentionAtAge)
+export(RetentionAtLength)
+export(RetentionModels)
+export(RetentionModelsAge)
+export(RetentionModelsLength)
 export(Ricker)
 export(SD)
 export(SRR)
@@ -301,6 +309,7 @@ export(TAC)
 export(TACfilter)
 export(Thresh_tab)
 export(TimeSteps)
+export(TimeUnits)
 export(Tplot)
 export(Tplot2)
 export(Tplot3)
@@ -366,8 +375,10 @@ export(multiMSE)
 export(multidebug)
 export(nAge)
 export(nArea)
+export(nFleet)
 export(nReps)
 export(nSim)
+export(nStock)
 export(nTS)
 export(nYears)
 export(nsim)
