--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,11 +87,10 @@ export("Units<-")
 export("Weight<-")
 export("nReps<-")
 export("nSim<-")
-export("nYears<-")
+export("nYear<-")
 export("nsim<-")
-export("nyears<-")
 export("pStar<-")
-export("pYears<-")
+export("pYear<-")
 export("proyears<-")
 export(AAVE)
 export(AAVY)
@@ -380,13 +379,12 @@ export(nReps)
 export(nSim)
 export(nStock)
 export(nTS)
-export(nYears)
+export(nYear)
 export(nsim)
-export(nyears)
 export(optCPU)
 export(optMSY_eq)
 export(pStar)
-export(pYears)
+export(pYear)
 export(plotFun)
 export(plotOFL)
 export(plotRel)
