--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -89,7 +89,7 @@ Collate:
     'Misc.R'
     'Misc_Exported.R'
     'Misc_Internal.R'
-    'ModelsObjects.R'
+    'Models.R'
     'Movement_calcs.R'
     'NewInternalFunctions.R'
     'OM_Plotting.R'
@@ -124,6 +124,7 @@ Collate:
     'applyMMP.R'
     'iSCAM2OM.R'
     'multiMSE.R'
+    'multiMSE_DEVCOPY.R'
     'multiMSE_internal.R'
     'multi_q_estimation.R'
     'popdyn.R'
