--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export("Final<-")
 export("FishingMortality<-")
 export("Fleet<-")
 export("FracOther<-")
+export("Herm<-")
 export("Initial<-")
 export("Interval<-")
 export("Latitude<-")
@@ -69,10 +70,12 @@ export("Relations<-")
 export("RelativeSize<-")
 export("Retention<-")
 export("SD<-")
+export("SPFrom<-")
 export("SRR<-")
 export("Seed<-")
 export("Selectivity<-")
 export("SexPars<-")
+export("SharePar<-")
 export("Source<-")
 export("Spatial<-")
 export("SpawnTimeFrac<-")
@@ -184,6 +187,7 @@ export(FishingMortality2Selectivity)
 export(FitMovement)
 export(Fleet)
 export(FracOther)
+export(Herm)
 export(HockeyStick)
 export(Initial)
 export(Input)
@@ -266,6 +270,7 @@ export(RetentionModelsAge)
 export(RetentionModelsLength)
 export(Ricker)
 export(SD)
+export(SPFrom)
 export(SRR)
 export(SRRModels)
 export(SRalphaconv)
@@ -291,6 +296,7 @@ export(SelectivityModelsAge)
 export(SelectivityModelsLength)
 export(Sense)
 export(SexPars)
+export(SharePar)
 export(Simulate)
 export(SimulateDEV)
 export(SimulateMOM)
@@ -448,6 +454,7 @@ exportClasses(om)
 exportClasses(prob.class)
 exportClasses(retention)
 exportClasses(selectivity)
+exportClasses(sexpars)
 exportClasses(spatial)
 exportClasses(srr)
 exportClasses(stock)
