--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,6 +62,7 @@ Collate:
     'Awatea2OM.R'
     'BAM2OM.R'
     'B_Low_functions.R'
+    'Calc.R'
     'Check.R'
     'Convert.R'
     'DFO.R'
@@ -71,9 +72,11 @@ Collate:
     'Data_documentation.R'
     'Data_fit_index.R'
     'Data_make_update.R'
+    'Empirical_MP.R'
     'Fease_Functions.R'
     'Find.R'
     'Generate.R'
+    'Get.R'
     'MICE_Rel.R'
     'MMSE_Object.r'
     'MMSE_plots.R'
@@ -103,6 +106,7 @@ Collate:
     'Populate.R'
     'Print.R'
     'RcppExports.R'
+    'SAM2OM.R'
     'SS2Data.R'
     'SS2MOM.R'
     'SS2MOM_plots.R'
@@ -114,6 +118,7 @@ Collate:
     'Sketch_Functions.R'
     'SlotAccessAssign.R'
     'SpatialStock.R'
+    'Splot.R'
     'Structure.R'
     'Templates.R'
     'Turing.R'
