--- a/NAMESPACE
+++ b/NAMESPACE
@@ -306,9 +306,10 @@ export(Source)
 export(Spatial)
 export(SpawnTimeFrac)
 export(Species)
+export(Splot)
 export(Sponsor)
 export(Stock)
-export(Splot)
+export(Sub)
 export(SubCpars)
 export(SubOM)
 export(TAC)
