--- a/NAMESPACE
+++ b/NAMESPACE
@@ -453,6 +453,7 @@ exportClasses(effort)
 exportClasses(fecundity)
 exportClasses(fishingmortality)
 exportClasses(fleet)
+exportClasses(hist)
 exportClasses(label.class)
 exportClasses(length)
 exportClasses(maturity)
