--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,6 +63,10 @@ Collate:
     'BAM2OM.R'
     'B_Low_functions.R'
     'Calc.R'
+    'CalcCurves.R'
+    'CalcSPR.R'
+    'CalcSurvival.R'
+    'CalculateFatAge.R'
     'CalculateRefPoints.R'
     'CalculateUnfished.R'
     'Check.R'
@@ -74,6 +78,7 @@ Collate:
     'Data_documentation.R'
     'Data_fit_index.R'
     'Data_make_update.R'
+    'DocData.R'
     'Empirical_MP.R'
     'Fease_Functions.R'
     'Find.R'
@@ -96,6 +101,7 @@ Collate:
     'Misc_Internal.R'
     'Models.R'
     'Movement_calcs.R'
+    'MultiplyArrays.R'
     'NewInternalFunctions.R'
     'OM_Plotting.R'
     'OM_functions.R'
@@ -108,6 +114,7 @@ Collate:
     'Populate.R'
     'Print.R'
     'RcppExports.R'
+    'ReduceArrayDimensions.R'
     'SAM2OM.R'
     'SS2Data.R'
     'SS2MOM.R'
