--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(AC)
 export(ASAP2Data)
 export(ASAP2OM)
 export(ASK)
+export(AddArrays)
 export(Agency)
 export(Ages)
 export(AllometricMortalityatLength)
@@ -167,6 +168,7 @@ export(Data_xl)
 export(Depletion)
 export(DiscardMortality)
 export(Distribution)
+export(DivideArrays)
 export(Dom)
 export(DoubleNormal)
 export(Effort)
@@ -221,6 +223,7 @@ export(Model)
 export(Modified)
 export(MortalityatAge)
 export(Movement)
+export(MultiplyArrays)
 export(NAor0)
 export(NFref)
 export(NOAA_plot)
@@ -312,6 +315,7 @@ export(Stock)
 export(Sub)
 export(SubCpars)
 export(SubOM)
+export(SubtractArrays)
 export(TAC)
 export(TACfilter)
 export(Thresh_tab)
