--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,9 +63,12 @@ Collate:
     'BAM2OM.R'
     'B_Low_functions.R'
     'Calc.R'
-    'CalcCurves.R'
+    'CalcCatch.R'
+    'CalcFatAge.R'
+    'CalcRelRec.R'
     'CalcSPR.R'
     'CalcSurvival.R'
+    'CalcYPR.R'
     'CalculateFatAge.R'
     'CalculateRefPoints.R'
     'CalculateUnfished.R'
@@ -84,6 +87,7 @@ Collate:
     'Find.R'
     'Generate.R'
     'Get.R'
+    'Import.R'
     'MICE_Rel.R'
     'MMSE_Object.r'
     'MMSE_plots.R'
