--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,11 +101,15 @@ export(AC)
 export(ASAP2Data)
 export(ASAP2OM)
 export(ASK)
-export(AddArrays)
 export(Agency)
 export(Ages)
 export(AllometricMortalityatLength)
 export(ApicalF)
+export(ArrayAdd)
+export(ArrayDivide)
+export(ArrayFill)
+export(ArrayMultiply)
+export(ArraySubtract)
 export(Assess2MOM)
 export(Assess2OM)
 export(AtAge2AtSize)
@@ -168,7 +172,6 @@ export(Data_xl)
 export(Depletion)
 export(DiscardMortality)
 export(Distribution)
-export(DivideArrays)
 export(Dom)
 export(DoubleNormal)
 export(Effort)
@@ -223,7 +226,6 @@ export(Model)
 export(Modified)
 export(MortalityatAge)
 export(Movement)
-export(MultiplyArrays)
 export(NAor0)
 export(NFref)
 export(NOAA_plot)
@@ -315,7 +317,6 @@ export(Stock)
 export(Sub)
 export(SubCpars)
 export(SubOM)
-export(SubtractArrays)
 export(TAC)
 export(TACfilter)
 export(Thresh_tab)
