--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,14 +64,16 @@ Collate:
     'B_Low_functions.R'
     'Calc.R'
     'CalcCatch.R'
+    'CalcCurves.R'
     'CalcFatAge.R'
+    'CalcNPR.R'
+    'CalcRefPoints.R'
     'CalcRelRec.R'
     'CalcSPR.R'
     'CalcSurvival.R'
+    'CalcUnfished.R'
     'CalcYPR.R'
     'CalculateFatAge.R'
-    'CalculateRefPoints.R'
-    'CalculateUnfished.R'
     'Check.R'
     'Convert.R'
     'DFO.R'
@@ -87,6 +89,7 @@ Collate:
     'Find.R'
     'Generate.R'
     'Get.R'
+    'GetFatAgeArray.R'
     'Import.R'
     'MICE_Rel.R'
     'MMSE_Object.r'
