--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ export(CVatAge)
 export(CalcASK)
 export(CalcAsymptoticDist)
 export(CalcMovement)
+export(CalcRefPoints)
 export(Can)
 export(Cant)
 export(Catchability)
