--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,21 +59,31 @@ Collate:
     'ASAP2OM.R'
     'Class_definitions.R'
     'AllNewClasses.R'
+    'ArrayOperations.R'
     'Awatea2OM.R'
     'BAM2OM.R'
     'B_Low_functions.R'
     'Calc.R'
+    'CalcApicalF.R'
     'CalcCatch.R'
     'CalcCurves.R'
+    'CalcDensity.R'
+    'CalcEffortDist.R'
     'CalcFatAge.R'
-    'CalcNPR.R'
+    'CalcFfromCatch.R'
+    'CalcFleetFMortality.R'
+    'CalcInitialTimeStep.R'
+    'CalcMICE.R'
+    'CalcNumber.R'
+    'CalcPerRecruit.R'
     'CalcPopDynamics.R'
     'CalcRefPoints.R'
     'CalcRelRec.R'
     'CalcSPR.R'
+    'CalcSpawnBiomass.R'
     'CalcSurvival.R'
     'CalcUnfished.R'
-    'CalcYPR.R'
+    'CalcUtility.R'
     'CalculateFatAge.R'
     'Check.R'
     'Convert.R'
@@ -109,13 +119,13 @@ Collate:
     'Misc_Internal.R'
     'Models.R'
     'Movement_calcs.R'
-    'MultiplyArrays.R'
     'NewInternalFunctions.R'
     'OM_Plotting.R'
     'OM_functions.R'
     'OM_import.R'
     'OM_init_doc.R'
     'OM_plots.R'
+    'OptimiseDepletion.R'
     'PMobjects.R'
     'PMtable.R'
     'Plot.R'
