--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export("ASK<-")
 export("Agency<-")
 export("Ages<-")
 export("ApicalF<-")
+export("ArrayFill<-")
 export("Author<-")
 export("CVDist<-")
 export("CVStay<-")
@@ -107,7 +108,6 @@ export(AllometricMortalityatLength)
 export(ApicalF)
 export(ArrayAdd)
 export(ArrayDivide)
-export(ArrayFill)
 export(ArrayMultiply)
 export(ArraySubtract)
 export(Assess2MOM)
