--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,6 +77,7 @@ Collate:
     'CalcNumber.R'
     'CalcPerRecruit.R'
     'CalcPopDynamics.R'
+    'CalcRecruitment.R'
     'CalcRefPoints.R'
     'CalcRelRec.R'
     'CalcSPR.R'
