--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,11 +63,9 @@ Collate:
     'Awatea2OM.R'
     'BAM2OM.R'
     'B_Low_functions.R'
-    'Calc.R'
     'CalcApicalF.R'
     'CalcCatch.R'
     'CalcCurves.R'
-    'CalcDensity.R'
     'CalcEffortDist.R'
     'CalcFatAge.R'
     'CalcFfromCatch.R'
@@ -95,6 +93,7 @@ Collate:
     'Data_documentation.R'
     'Data_fit_index.R'
     'Data_make_update.R'
+    'DistributeEffort.R'
     'DocData.R'
     'Empirical_MP.R'
     'Fease_Functions.R'
