--- a/NAMESPACE
+++ b/NAMESPACE
@@ -620,3 +620,4 @@ importFrom(utils,setTxtProgressBar)
 importFrom(utils,str)
 importFrom(utils,txtProgressBar)
 useDynLib(MSEtool)
+useDynLib(MSEtool, .registration = TRUE)
