--- a/NAMESPACE
+++ b/NAMESPACE
@@ -276,6 +276,7 @@ export(RetentionModels)
 export(RetentionModelsAge)
 export(RetentionModelsLength)
 export(Ricker)
+export(RunSRRfunction)
 export(SD)
 export(SPFrom)
 export(SRR)
