--- a/NAMESPACE
+++ b/NAMESPACE
@@ -482,6 +482,7 @@ exportMethods(show)
 exportMethods(summary)
 exportMethods(tinyErr)
 importFrom(Rcpp,evalCpp)
+importFrom(Rcpp,sourceCpp)
 importFrom(abind,abind)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,all_of)
