--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,6 +143,7 @@ export(XL2Fleet)
 export(XL2OM)
 export(XL2Stock)
 export(Yield)
+export(addMMPs)
 export(addMPs)
 export(alphaconv)
 export(applyMP)
