updates for octopus

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(AC)
 export(ASAP2Data)
 export(ASAP2OM)
 export(ASK)
+export(Advice)
 export(Agency)
 export(Ages)
 export(AllometricMortalityatLength)
@@ -206,6 +207,7 @@ export(Lag_Data)
 export(Latitude)
 export(Length)
 export(LengthModels)
+export(List2Array)
 export(Longitude)
 export(ML2D)
 export(MOM_agg_fleets)
@@ -255,6 +257,7 @@ export(Pplot)
 export(Pplot2)
 export(ProbStaying)
 export(Project)
+export(ProjectDEV)
 export(ProjectMOM)
 export(R0conv)
 export(RDoubleNormal)
@@ -275,6 +278,7 @@ export(RetentionAtLength)
 export(RetentionModels)
 export(RetentionModelsAge)
 export(RetentionModelsLength)
+export(ReverseList)
 export(Ricker)
 export(RunSRRfunction)
 export(SD)
