--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -133,6 +133,7 @@ Collate:
     'OM_init_doc.R'
     'OM_plots.R'
     'OptimiseDepletion.R'
+    'OptimiseRefCatch.R'
     'PMobjects.R'
     'PMtable.R'
     'Plot.R'
