--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -271,6 +271,10 @@ reference:
   - Sub
   - checkMSE
   - joinData
+  
+- subtitle: MMSE
+  contents:
+  - addMMPs
 
 - subtitle: Internal functions
   desc: Populations dynamics functions and other processing functions
