--- a/NAMESPACE
+++ b/NAMESPACE
@@ -253,6 +253,8 @@ export(PWhisker)
 export(Pars)
 export(Period)
 export(PlusGroup)
+export(PopulateOM)
+export(PopulateStock)
 export(Pplot)
 export(Pplot2)
 export(ProbStaying)
