--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,7 +131,7 @@ export(CSRA)
 export(CVDist)
 export(CVStay)
 export(CVatAge)
-export(CalcASK)
+export(CalcAgeSizeKey)
 export(CalcAsymptoticDist)
 export(CalcMovement)
 export(CalcRefPoints)
@@ -481,7 +481,6 @@ exportClasses(srr)
 exportClasses(stock)
 exportClasses(weight)
 exportMethods(Check)
-exportMethods(Populate)
 exportMethods(SubCpars)
 exportMethods(plot)
 exportMethods(show)
