--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,7 +149,6 @@ export(CommonName)
 export(Complexes)
 export(Control)
 export(Converge)
-export(Convert)
 export(Cos_thresh_tab)
 export(Cplot)
 export(Created)
@@ -238,6 +237,7 @@ export(NaturalMortality)
 export(NaturalMortalityModels)
 export(Needed)
 export(OM)
+export(OM2om)
 export(OMdoc)
 export(OMexample)
 export(OMinit)
