--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -130,6 +130,7 @@ Collate:
     'Models.R'
     'Movement_calcs.R'
     'NewInternalFunctions.R'
+    'OM2Hist.R'
     'OM_Plotting.R'
     'OM_functions.R'
     'OM_import.R'
@@ -155,6 +156,7 @@ Collate:
     'SampleOM.R'
     'SelectivityRetention.R'
     'SimulateDEV.R'
+    'SimulateDynamics.R'
     'Sketch_Functions.R'
     'SlotAccessAssign.R'
     'SpatialStock.R'
