--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -144,6 +144,7 @@ Collate:
     'Populate.R'
     'PopulateFunctions.R'
     'Print.R'
+    'Project.R'
     'ProjectMP.R'
     'RcppExports.R'
     'ReduceArrayDimensions.R'
