--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(AC)
 export(ASAP2Data)
 export(ASAP2OM)
 export(ASK)
+export(Advice)
 export(Agency)
 export(Ages)
 export(AllometricMortalityatLength)
