--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,9 +60,41 @@ LinkingTo:
 BugReports: https://github.com/Blue-Matter/MSEtool/issues
 URL: https://msetool.openmse.com/
 Collate: 
-    'ASAP2OM.R'
+    '00_Class_unions.R'
+    '00_Class_CheckList.R'
+    '00_Class_child.R'
+    '00_Class_discardmortality.R'
+    '00_Class_retention.R'
+    '00_Class_selectivity.R'
+    '00_Class_advice.R'
+    '00_Class_ages.R'
+    '00_Class_curves.R'
+    '00_Class_data.R'
+    '00_Class_depletion.R'
+    '00_Class_distribution.R'
+    '00_Class_effort.R'
+    '00_Class_fecundity.R'
+    '00_Class_fishingmortality.R'
+    '00_Class_fleet.R'
+    '00_Class_timeseries.R'
+    '00_Class_popdynamics.R'
+    '00_Class_refpoints.R'
+    '00_Class_unfished.R'
+    '00_Class_imp.R'
+    '00_Class_obs.R'
+    '00_Class_sexpars.R'
+    '00_Class_spatial.R'
+    '00_Class_srr.R'
+    '00_Class_maturity.R'
+    '00_Class_naturalmortality.R'
+    '00_Class_weight.R'
+    '00_Class_length.R'
+    '00_Class_stock.R'
     'Class_definitions.R'
-    'AllNewClasses.R'
+    '00_Class_om.R'
+    '00_Class_hist.R'
+    '00_Class_mse.R'
+    'ASAP2OM.R'
     'ArrayCreate.R'
     'ArrayOperations.R'
     'Awatea2OM.R'
@@ -91,6 +123,7 @@ Collate:
     'CalcUtility.R'
     'CalculateFatAge.R'
     'Check.R'
+    'Class_data.R'
     'MOM_object.r'
     'Convert.R'
     'DFO.R'
@@ -108,6 +141,7 @@ Collate:
     'Generate.R'
     'Get.R'
     'GetFatAgeArray.R'
+    'Hist2MSE.R'
     'Import.R'
     'MICE.R'
     'MICE_Rel.R'
