--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export("Model<-")
 export("Movement<-")
 export("Name<-")
 export("NaturalMortality<-")
+export("Obs<-")
 export("Pars<-")
 export("Period<-")
 export("PlusGroup<-")
@@ -451,8 +452,6 @@ exportClasses(MOM)
 exportClasses(OM)
 exportClasses(Obs)
 exportClasses(Stock)
-exportClasses(ages)
-exportClasses(biology)
 exportClasses(char.log)
 exportClasses(data)
 exportClasses(depletion)
@@ -463,10 +462,12 @@ exportClasses(fecundity)
 exportClasses(fishingmortality)
 exportClasses(fleet)
 exportClasses(hist)
+exportClasses(imp)
 exportClasses(label.class)
 exportClasses(length)
 exportClasses(maturity)
 exportClasses(naturalmortality)
+exportClasses(obs)
 exportClasses(om)
 exportClasses(prob.class)
 exportClasses(retention)
