--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,8 +113,6 @@ export(ArrayMultiply)
 export(ArraySubtract)
 export(Assess2MOM)
 export(Assess2OM)
-export(AtAge2AtSize)
-export(AtSize2AtAge)
 export(Author)
 export(Awatea2OM)
 export(BAM2MOM)
@@ -239,6 +237,7 @@ export(OM2om)
 export(OMdoc)
 export(OMexample)
 export(OMinit)
+export(Obs)
 export(OneRep)
 export(P10)
 export(P100)
