--- a/NAMESPACE
+++ b/NAMESPACE
@@ -213,9 +213,11 @@ export(MarkovFrac)
 export(Maturity)
 export(MaturityAtAge)
 export(MaturityAtLength)
+export(MaturityAtWeight)
 export(MaturityModels)
 export(MaturityModelsAge)
 export(MaturityModelsLength)
+export(MaturityModelsWeight)
 export(MaxAge)
 export(MeanAtAge)
 export(MeanAtLength)
@@ -300,9 +302,11 @@ export(Seed)
 export(Selectivity)
 export(SelectivityAtAge)
 export(SelectivityAtLength)
+export(SelectivityAtWeight)
 export(SelectivityModels)
 export(SelectivityModelsAge)
 export(SelectivityModelsLength)
+export(SelectivityModelsWeight)
 export(Sense)
 export(SexPars)
 export(SharePar)
