--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ export(DiscardMortality)
 export(Distribution)
 export(Dom)
 export(DoubleNormal)
+export(DoubleNormalWeight)
 export(Effort)
 export(Email)
 export(Emp)
@@ -257,6 +258,7 @@ export(Pplot)
 export(Pplot2)
 export(ProbStaying)
 export(Project)
+export(ProjectDEV)
 export(ProjectMOM)
 export(R0conv)
 export(RDoubleNormal)
