--- a/NAMESPACE
+++ b/NAMESPACE
@@ -262,6 +262,7 @@ export(ProjectDEV)
 export(ProjectMOM)
 export(R0conv)
 export(RDoubleNormal)
+export(ReProject)
 export(RealFease)
 export(RecDevHist)
 export(RecDevInit)
@@ -276,9 +277,11 @@ export(Required)
 export(Retention)
 export(RetentionAtAge)
 export(RetentionAtLength)
+export(RetentionAtWeight)
 export(RetentionModels)
 export(RetentionModelsAge)
 export(RetentionModelsLength)
+export(RetentionModelsWeight)
 export(ReverseList)
 export(Ricker)
 export(RunSRRfunction)
