--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ export(CommonName)
 export(Complexes)
 export(Control)
 export(Converge)
+export(ConvertDF)
 export(Cos_thresh_tab)
 export(Cplot)
 export(CurrentYear)
@@ -190,6 +191,7 @@ export(FishingMortality)
 export(FishingMortality2Selectivity)
 export(FitMovement)
 export(Fleet)
+export(FleetNames)
 export(FracOther)
 export(Herm)
 export(HockeyStick)
@@ -326,6 +328,7 @@ export(Species)
 export(Splot)
 export(Sponsor)
 export(Stock)
+export(StockNames)
 export(Sub)
 export(SubCpars)
 export(SubOM)
