--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,6 +117,7 @@ export(Author)
 export(Awatea2OM)
 export(BAM2MOM)
 export(BevertonHolt)
+export(Biomass)
 export(CALsimp)
 export(COSEWIC_Blow)
 export(COSEWIC_Dplot)
@@ -487,6 +488,7 @@ exportClasses(spatial)
 exportClasses(srr)
 exportClasses(stock)
 exportClasses(weight)
+exportMethods(Biomass)
 exportMethods(SubCpars)
 exportMethods(plot)
 exportMethods(show)
