--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -166,6 +166,7 @@ Collate:
     'Models.R'
     'Movement_calcs.R'
     'NewInternalFunctions.R'
+    'Number.R'
     'OM2Hist.R'
     'OM_Plotting.R'
     'OM_functions.R'
@@ -185,7 +186,10 @@ Collate:
     'ProjectMP.R'
     'RcppExports.R'
     'ReduceArrayDimensions.R'
+    'Removals.R'
     'SAM2OM.R'
+    'SBiomass.R'
+    'SProduction.R'
     'SS2Data.R'
     'SS2MOM.R'
     'SS2MOM_plots.R'
