--- a/NAMESPACE
+++ b/NAMESPACE
@@ -203,6 +203,7 @@ export(Kplot)
 export(LH2OM)
 export(LTY)
 export(Lag_Data)
+export(Landings)
 export(Latitude)
 export(Length)
 export(LengthModels)
@@ -237,6 +238,7 @@ export(Name)
 export(NaturalMortality)
 export(NaturalMortalityModels)
 export(Needed)
+export(Number)
 export(OM)
 export(OM2om)
 export(OMdoc)
@@ -274,6 +276,7 @@ export(Reference)
 export(Region)
 export(Relations)
 export(RelativeSize)
+export(Removals)
 export(Replace)
 export(Report)
 export(Required)
@@ -288,8 +291,10 @@ export(RetentionModelsWeight)
 export(ReverseList)
 export(Ricker)
 export(RunSRRfunction)
+export(SBiomass)
 export(SD)
 export(SPFrom)
+export(SProduction)
 export(SRR)
 export(SRRModels)
 export(SRalphaconv)
@@ -488,7 +493,6 @@ exportClasses(spatial)
 exportClasses(srr)
 exportClasses(stock)
 exportClasses(weight)
-exportMethods(Biomass)
 exportMethods(SubCpars)
 exportMethods(plot)
 exportMethods(show)
