--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,7 +133,9 @@ export(CVatAge)
 export(CalcAgeSizeKey)
 export(CalcAsymptoticDist)
 export(CalcMovement)
+export(CalcRefLandings)
 export(CalcRefPoints)
+export(CalcRefRemovals)
 export(Can)
 export(Cant)
 export(Catchability)
