--- a/NAMESPACE
+++ b/NAMESPACE
@@ -267,6 +267,7 @@ export(ProbStaying)
 export(Project)
 export(ProjectDEV)
 export(ProjectMOM)
+export(ProjectionTimeStep)
 export(R0conv)
 export(RDoubleNormal)
 export(ReProject)
