--- a/NAMESPACE
+++ b/NAMESPACE
@@ -291,6 +291,7 @@ export(RetentionModels)
 export(RetentionModelsAge)
 export(RetentionModelsLength)
 export(RetentionModelsWeight)
+export(ReturnEffort)
 export(ReverseList)
 export(Ricker)
 export(RunSRRfunction)
