--- a/NAMESPACE
+++ b/NAMESPACE
@@ -198,6 +198,8 @@ export(FleetNames)
 export(FracOther)
 export(Herm)
 export(HockeyStick)
+export(ImportSS)
+export(ImportSSRepList)
 export(Initial)
 export(Input)
 export(Interval)
