--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -95,6 +95,7 @@ Collate:
     '00_Class_hist.R'
     '00_Class_mse.R'
     'ASAP2OM.R'
+    'ApplyMPInternal.R'
     'ArrayCreate.R'
     'ArrayOperations.R'
     'Awatea2OM.R'
@@ -125,6 +126,7 @@ Collate:
     'CalculateFatAge.R'
     'Check.R'
     'Class_data.R'
+    'Condition_Obs.R'
     'MOM_object.r'
     'Convert.R'
     'DFO.R'
