--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,7 +134,6 @@ export(CalcAgeSizeKey)
 export(CalcAsymptoticDist)
 export(CalcMovement)
 export(CalcRefLandings)
-export(CalcRefPoints)
 export(CalcRefRemovals)
 export(Can)
 export(Cant)
@@ -199,7 +198,7 @@ export(FracOther)
 export(Herm)
 export(HockeyStick)
 export(ImportSS)
-export(ImportSSRepList)
+export(ImportSSReport)
 export(Initial)
 export(Input)
 export(Interval)
@@ -272,7 +271,6 @@ export(ProjectMOM)
 export(ProjectionTimeStep)
 export(R0conv)
 export(RDoubleNormal)
-export(ReProject)
 export(RealFease)
 export(RecDevHist)
 export(RecDevInit)
